feat]-#15-평균 로직 수정